[package]
name = "veoveo-perception-mcp"
version.workspace = true
edition.workspace = true

[lib]
name = "veoveo_perception_mcp"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
base64.workspace = true
chrono.workspace = true
clap.workspace = true
dotenvy.workspace = true
futures.workspace = true
rmcp = { workspace = true, features = ["server", "macros", "transport-streamable-http-server"] }
rustls.workspace = true
schemars.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile = "3"
tokio = { workspace = true, features = ["full", "process"] }
tokio-util.workspace = true
tower-http.workspace = true
tracing.workspace = true
uuid.workspace = true

re_sdk.workspace = true
re_sdk_types.workspace = true
re_log_types.workspace = true

veoveo-artifact-client = { path = "../../platform/artifacts/client" }
veoveo-mcp-contract.workspace = true
veoveo-mcp-task-extension = { path = "../../mcp/task-extension" }
veoveo-platform-store.workspace = true
veoveo-recording-hub = { path = "../../platform/recordings/hub" }
veoveo-recording-mcp = { path = "../recording-mcp" }
veoveo-task-runtime = { path = "../../platform/task-runtime" }
