[package]
name = "veoveo-recording-mcp"
version.workspace = true
edition.workspace = true

[lib]
name = "veoveo_recording_mcp"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
base64.workspace = true
chrono.workspace = true
clap.workspace = true
rmcp = { workspace = true, features = ["server", "transport-streamable-http-server"] }
rustls.workspace = true
schemars.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal", "fs"] }
tokio-util.workspace = true
tower-http.workspace = true
tower.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid = { workspace = true, features = ["serde", "v7"] }
veoveo-artifact-client = { path = "../../platform/artifacts/client" }
veoveo-mcp-contract.workspace = true
veoveo-platform-store.workspace = true
veoveo-recording-hub = { path = "../../platform/recordings/hub" }

[dev-dependencies]
tempfile = "3"
tower = { workspace = true, features = ["util"] }
